# fix-season-names

./: Makefile  README.md  pyproject.toml
src/: fix_season_names.py  main.py  tmdb.py  util.py  version.py
